fix: deploy to heroku failed
also fixed issue where shame text caused horizontal scrolling

--- a/src/app/meetupevent/meetupevent.component.scss
+++ b/src/app/meetupevent/meetupevent.component.scss
@@ -25,9 +25,8 @@ img.winner {
 
 .shame {
   position: absolute;
-  width: 100%;
   color: red;
   font-size: 158px;
-  top: 300px;
+  top: 40%;
   font-family: Georgia, sans-serif;
 }
